--- a/ApMapTool/ApMapTool/ApMapTool.vcxproj.filters
+++ b/ApMapTool/ApMapTool/ApMapTool.vcxproj.filters
@@ -78,6 +78,15 @@
     <ClInclude Include="TileDetailStruct.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="SpawnTileNode.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="WarpTileNode.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="TileShortcut.h">
+      <Filter>소스 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -120,6 +129,12 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="DetailWindow.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="SpawnTileNode.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="WarpTileNode.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
