--- a/ApMapTool/ApMapTool/asset.ini
+++ b/ApMapTool/ApMapTool/asset.ini
@@ -6,4 +6,5 @@
 엔피씨-경찰, NpcPoliceTile, textures\npc.bmp
 포탈타일, PortalTile, textures\portal.bmp
 분수장식블럭, DecoTile, textures\Fountain.bmp, FountainTile
+반지 오브젝트-스위치, RingTile, textures\ring.bmp
 ##end
